# NOAFinder

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
.github/workflows/: daily-snapshot.yml  weekly-digest.yml
src/noa_finder/: cli.py  config.py  digest.py  notify.py  report.py  sync.py  wrike.py
src/wrike_usaspending/: _http.py  cli.py  config.py  sync.py  usaspending.py  wrike.py
tests/: test_cli.py  test_digest.py  test_http.py  test_notify.py  test_report.py  test_sync.py  test_usaspending.py  test_wrike.py
web/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/signin/: page.tsx
web/components/: DashboardTable.tsx  Filters.tsx  Header.tsx  SignOutButton.tsx  StatsBar.tsx
web/lib/: auth.ts  csv.ts  data.ts  format.ts  types.ts
web/public/: Logo.psd
web/public/data/: report.json
