[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrike-usaspending"
version = "0.1.0"
description = "Sync USASpending.gov award data into Wrike using the recipient UEI custom field."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
wrike-usaspending = "wrike_usaspending.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
