[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noa-finder"
version = "0.1.0"
description = "NOA Finder by Grant Engine: pull federal awards from USASpending.gov by recipient UEI and surface them in Wrike, with weekly Slack + email digests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
noa-finder = "noa_finder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
